<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">铜冠库存管理</string>
    <string name="main_activity">产成品仓库库存管理</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_login">登录</string>
    <string name="login_btn_login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="title_activity_inv_in">实物入库管理</string>
    <string name="item_code">物料条码</string>
    <string name="inv_in_add_item_btn">添加成品条码</string>
    <string name="inv_code">库存编码</string>
    <string name="btn_save">保存</string>
    <string name="btn_clear">清空</string>
    <string name="title_activity_ipconfig">接口配置</string>
    <string name="api_address">接口地址</string>
    <string name="company_name">铜陵有色</string>
    <string name="btn_inv_in">入库</string>
    <string name="btn_inv_out">出库</string>
    <string name="btn_inv_split">拆包</string>
    <string name="title_activity_inv_out">实物出库管理</string>
    <string name="login_error_text">用户名和密码都不能为空</string>
    <string name="logout">退出</string>
    <string name="title_activity_split">拆包管理</string>
    <string name="split_item_code">包装条码</string>
    <string name="btn_ok">确定</string>
    <string name="btn_search">查找</string>
    <string name="btn_allocate">配货</string>
    <string name="split_search_alert_msg">包装条码不能为空</string>
    <string name="title_activity_products">包装列表</string>
    <string name="empty_product_label">没有对应的记录</string>
    <string name="title_activity_split_product">包装信息</string>
    <string name="delivery_number">码单编号</string>
    <string name="title_activity_split_products">产品列表</string>
    <string name="title_unsplitted">未拆包</string>
    <string name="title_splitted">已拆包</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="productno_label">产品编号</string>
    <string name="inlocator_label">货位</string>
    <string name="weight_label">重量</string>
    <string name="btn_print_label">打印</string>
    <string name="title_activity_inv_out_delivery_list">出库码单明细</string>
    <string name="menu_action_save_button_label">保存</string>
    <string name="btnAdd">添加</string>
    <string name="btn_delete">删除</string>
    <string name="title_activity_inv_out_item_select">产品选择</string>
    <string name="btn_choose">选择</string>
    <string name="inv_help_text">请扫描或者输入物料成品条码，然后点击添加成品条码按钮；再扫描或者输入库存编码，并点击保存</string>
    <string name="title_activity_inv_in_manager">实务入库管理</string>
    <string name="title_in_scan">扫码入库</string>
    <string name="title_in_select">选择入库</string>
    <string name="title_in_history">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_title_fresh">刷新</string>
    <string name="txt_inv_code">库存编码</string>
    <string name="txt_no_record">没有任何记录</string>

</resources>
