<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="tgit.inventory.ui.InvInActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtItemCode"
        android:textSize="25sp"
        android:hint="@string/item_code"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inv_in_add_item_btn"
        android:id="@+id/btnAddItem"
        android:textSize="25sp"
        android:layout_below="@+id/edtItemCode"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtInvCode"
        android:hint="@string/inv_code"
        android:textSize="25sp"
        android:singleLine="true"
        android:layout_below="@+id/btnAddItem"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:id="@+id/btnSend"
        android:textSize="25sp"
        android:layout_below="@+id/edtInvCode"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25sp"
        android:id="@+id/txtItemCodes"
        android:layout_below="@+id/btnSend"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_clear"
        android:id="@+id/btnClear"
        android:layout_below="@+id/txtItemCodes"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
