<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="tgit.inventory.ui.SplitActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtItemCode"
        android:textSize="36sp"
        android:hint="@string/split_item_code"
        android:layout_marginTop="83dp"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_search"
        android:id="@+id/btnSearch"
        android:textSize="24sp"
        android:layout_below="@+id/edtItemCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_clear"
        android:id="@+id/btnClear"
        android:textSize="24sp"
        android:layout_below="@+id/btnSearch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"/>
</RelativeLayout>
