<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="tgit.inventory.ui.LoginActivity"
                android:background="@color/background_grey">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="铜冠库存管理"
            android:id="@+id/title"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/light_green_text"
            android:textSize="36sp"
            android:layout_marginTop="26dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="移动应用系统"
            android:id="@+id/subtitle"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:textColor="@color/light_green_text"
            android:layout_marginTop="20dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtUserName"
            android:hint="@string/username"
            android:singleLine="true"
            android:layout_below="@+id/subtitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtPassword"
            android:hint="@string/password" android:layout_below="@+id/edtUserName"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_login"
            android:id="@+id/btnLogin"
            android:background="@drawable/button_custom"
            android:textColor="@android:color/white" android:layout_centerVertical="true"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="技术支持:铜冠信息科技"
            android:id="@+id/textView"
            android:layout_below="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:textColor="@color/light_green_text"
            android:layout_marginTop="34dp"/>
</RelativeLayout>
